ontopia-core/src/test/resources/net/ontopia/testdata/ltm/error/prefix-with-colon.ltm
#PREFIX colon @"http://some-address/#"
#PREFIX colon:prefix @"http://some-other-address/#"
[foo = "A topic"]
